docs(claude): detail full file system structure with compile-time minimums
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>